# graph_extractor_by_opencode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  EXAMPLES.md
examples/: advanced_usage.py  basic_usage.py  neo4j_config.example.json
repo_analyzer/: __init__.py  exceptions.py  main.py
repo_analyzer/config/: neo4j_config.py
repo_analyzer/core/: cross_analyzer.py  graph_builder.py  repo_manager.py
repo_analyzer/matcher/: candidate_ranker.py  url_matcher.py
repo_analyzer/models/: entities.py  relations.py
repo_analyzer/parsers/: base_parser.py  java_parser.py  json_parser.py  ts_parser.py  yaml_parser.py
repo_analyzer/writer/: neo4j_writer.py
tests/: test_entities.py  test_java_parser.py  test_java_parser_extended.py  test_matcher_cases.py  test_ts_parser.py  test_url_matcher.py  test_yaml_parser.py
